tests/ui/parser/bounds-lifetime-where-1.stderr
error: expected `:`, found `;`
  --> $DIR/bounds-lifetime-where-1.rs:1:16
   |
LL | type A where 'a;
   |                ^ expected `:`

error: aborting due to 1 previous error

