tests/ui/parser/bounds-lifetime-where-1.rs
type A where 'a; //~ ERROR expected `:`, found `;`

fn main() {}
